[project]
name = "cypher-ball"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Matthew Henrich", email = "matthewhenrich04@gmail.com" }
]
dependencies = [
    "flet>=0.85.1"
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.1",
    "flet-desktop>=0.85.1",
    "flet-web>=0.85.1",
]

[tool.flet]
product = "cypher-ball"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Matthew Henrich"

[tool.flet.app]
path = "src"
